k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
  - port: 8000
    name: app
    protocol: TCP
    targetPort: 8000
  selector:
    app: app
